[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/pixlefont.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/Buttons/Button.gd" type="Script" id=2]
[ext_resource path="res://UI/Buttons/Label.gd" type="Script" id=3]

[node name="MenuButton" type="Button"]
margin_right = 256.0
margin_bottom = 20.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
action_mode = 0
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Label"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="button_down" from="." to="." method="_on_MenuButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_MenuButton_button_up"]
[connection signal="pressed" from="." to="." method="_on_MenuButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
